--- a/package.json
+++ b/package.json
@@ -25,31 +25,33 @@
   },
   "homepage": "https://github.com/kaptux/nooket-doc#readme",
   "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@storybook/addon-actions": "^4.0.4",
+    "@storybook/addon-links": "^4.0.4",
+    "@storybook/addons": "^4.0.4",
+    "@storybook/react": "^4.0.4",
+    "@types/codemirror": "0.0.71",
     "@types/react": "^16.7.2",
     "@types/react-dom": "^16.0.9",
     "@types/storybook__react": "^4.0.0",
+    "antd": "3.9.2",
     "awesome-typescript-loader": "^5.2.1",
-    "@babel/core": "^7.1.0",
+    "babel-loader": "^8.0.0",
+    "classnames": "^2.2.6",
+    "memoize-one": "^4.0.2",
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "styled-components": "^4.0.0-beta.9",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-react": "^3.6.0",
     "typescript": "^3.1.6",
-    "webpack": "^4.25.1",
-    "@storybook/react": "^4.0.4",
-    "@storybook/addon-actions": "^4.0.4",
-    "@storybook/addon-links": "^4.0.4",
-    "@storybook/addons": "^4.0.4",
-    "babel-loader": "^8.0.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "prop-types": "^15.6.2",
-    "antd": "3.9.2",
-    "classnames": "^2.2.6",
-    "memoize-one": "^4.0.2",
-    "moment": "^2.22.2",
-    "styled-components": "^4.0.0-beta.9"
+    "webpack": "^4.25.1"
   },
   "dependencies": {
+    "codemirror": "^5.42.2",
     "nooket-common": "0.0.9"
   },
   "peerDependencies": {
