--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "codemirror": "^5.42.2",
+    "codemirror-spell-checker": "^1.1.2",
     "fast-deep-equal": "^2.0.1",
     "nooket-common": "0.0.9"
   },
