--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
     "codemirror": "^5.42.2",
     "codemirror-spell-checker": "^1.1.2",
     "fast-deep-equal": "^2.0.1",
-    "nooket-common": "0.0.9"
+    "highlight.js": "^9.13.1",
+    "nooket-common": "0.0.9",
+    "react-render-html": "^0.6.0",
+    "remarkable": "^1.7.1"
   },
   "peerDependencies": {
     "react": "^16.5.2",
