--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "codemirror-spell-checker": "^1.1.2",
     "fast-deep-equal": "^2.0.1",
     "highlight.js": "^9.13.1",
+    "lodash.debounce": "^4.0.8",
     "nooket-common": "0.0.9",
     "react-render-html": "^0.6.0",
     "remarkable": "^1.7.1"
