--- a/package.json
+++ b/package.json
@@ -58,9 +58,18 @@
     "fast-deep-equal": "^2.0.1",
     "highlight.js": "^9.13.1",
     "lodash.debounce": "^4.0.8",
+    "markdown-it": "^8.4.2",
+    "markdown-it-container": "^2.0.0",
+    "markdown-it-deflist": "^2.0.3",
+    "markdown-it-emoji": "^1.4.0",
+    "markdown-it-footnote": "^3.0.1",
+    "markdown-it-ins": "^2.0.0",
+    "markdown-it-katex": "^2.0.3",
+    "markdown-it-mark": "^2.0.0",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
     "nooket-common": "0.0.9",
-    "react-render-html": "^0.6.0",
-    "remarkable": "^1.7.1"
+    "react-render-html": "^0.6.0"
   },
   "peerDependencies": {
     "react": "^16.5.2",
