--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "svg": "npx @svgr/cli -d ./src/svg ./src/svg",
-    "build": "npm rm -rf ./lib && tsc && cp -r ./src/css ./lib && cp -r ./src/codemirror ./lib && cp -r ./src/svg ./lib",
+    "build": "npm rm -rf ./lib && tsc && cp -r ./src/css ./lib && cp -r ./src/svg ./lib",
     "storybook": "start-storybook -p 6006",
     "prepare": "npm run build",
     "build-storybook": "build-storybook"
