--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "declaration": false,
     "sourceMap": true,
     "jsx": "react",
+    "allowJs": true,
     "typeRoots": ["index.d.ts", "node_modules/@types"]
   },
   "include": ["./src/**/*.tsx", "./src/**/*.ts"],
