zIndex prop && katex dependecy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nooket-editor",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Custom markdown editor for Nooket",
   "main": "lib/index.js",
   "scripts": {
@@ -57,6 +57,7 @@
     "codemirror-spell-checker": "^1.1.2",
     "fast-deep-equal": "^2.0.1",
     "highlight.js": "^9.13.1",
+    "katex": "^0.6.0",
     "lodash.debounce": "^4.0.8",
     "markdown-it": "^8.4.2",
     "markdown-it-container": "^2.0.0",
