--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nooket-editor",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "description": "Custom markdown editor for Nooket",
   "main": "lib/index.js",
   "scripts": {
@@ -69,7 +69,8 @@
     "markdown-it-mark": "^2.0.0",
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
-    "nooket-common": "0.0.9"
+    "nooket-common": "0.0.9",
+    "react-html-parser": "^2.0.2"
   },
   "peerDependencies": {
     "react": "^16.5.2",
