--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nooket-editor",
-  "version": "0.0.33",
+  "version": "0.0.34",
   "description": "Custom markdown editor for Nooket",
   "main": "lib/index.js",
   "scripts": {
@@ -69,8 +69,7 @@
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
     "mermaid": "^8.4.6",
-    "nooket-common": "0.0.9",
-    "react-html-parser": "^2.0.2"
+    "nooket-common": "0.0.9"
   },
   "peerDependencies": {
     "react": "^16.5.2",
